Modificando css e adicionando função de pegar o marcador

--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,16 @@
                 <p>Lat: <span id="lat"></span></p>
                 <p>Lng: <span id="lng"></span></p>
             </div>
-            <input type="text" name="event" id="event" placeholder="Nome do evento">
-            <textarea name="desc" id="desc" cols="30" rows="10" placeholder="Descrição do evento"
-                maxlength="600"></textarea>
-            <p id="char-count-display">
-                <span id="char-count"></span><span id="max-char"></span>
-            </p>
+            <div id="textsinputs">
+                <input type="text" name="event" id="event" placeholder="Nome do evento">
+                <textarea name="desc" id="desc" cols="30" rows="10" placeholder="Descrição do evento"
+                    maxlength="600"></textarea>
+            </div>
+            <div id="boxinfo">
+                <p id="char-count-display">
+                    <span id="char-count"></span><span id="max-char"></span>
+                </p>
+            </div>
             <button class="button" id="menu-button">Salvar</button>
         </div>
 
