Fazendo a lista de eventos funcionar

--- a/public/index.html
+++ b/public/index.html
@@ -53,9 +53,9 @@
             <h1 id="list-title">Eventos</h1>
             <div id="list-search">
                 <input type="text" name="search" class="text-input" id="searchbar">
-                <button class="button icon-btn" id="search-btn">
-                    <ion-icon name="search-outline"></ion-icon>
-                </button>
+                <div id="searchIcon">
+                    <ion-icon name="search-outline" id="searchIconIcon"></ion-icon>
+                </div>
             </div>
             <ul id="list-list">
                 <!-- SAMPLE 
@@ -82,7 +82,6 @@
             <div class="map-icon" id="open-list">
                 <ion-icon name="menu-outline"></ion-icon>
             </div>
-
             <div id="map"></div>
             <div id="glass"></div>
 
